--- a/zotero.bib
+++ b/zotero.bib
@@ -88,55 +88,6 @@
 	file = {arXiv\:1412.6980 PDF:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/F3NRV8A4/Kingma and Ba - 2014 - Adam A Method for Stochastic Optimization.pdf:application/pdf;arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/UHTTRZWN/1412.html:text/html}
 }
 
-@online{mazur_step_2015,
-	title = {A Step by Step Backpropagation Example},
-	url = {https://mattmazur.com/2015/03/17/a-step-by-step-backpropagation-example/},
-	abstract = {Background Backpropagation is a common method for training a neural network. There is no shortage of papers online that attempt to explain how backpropagation works, but few that include an example…},
-	titleaddon = {Matt Mazur},
-	author = {{Mazur}},
-	urldate = {2017-04-19},
-	date = {2015-03-17},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/DZNJXE2T/a-step-by-step-backpropagation-example.html:text/html}
-}
-
-@article{edwards_towards_2016,
-	title = {Towards a Neural Statistician},
-	url = {http://arxiv.org/abs/1606.02185},
-	abstract = {An efficient learner is one who reuses what they already know to tackle a new problem. For a machine learner, this means understanding the similarities amongst datasets. In order to do this, one must take seriously the idea of working with datasets, rather than datapoints, as the key objects to model. Towards this goal, we demonstrate an extension of a variational autoencoder that can learn a method for computing representations, or statistics, of datasets in an unsupervised fashion. The network is trained to produce statistics that encapsulate a generative model for each dataset. Hence the network enables efficient learning from new datasets for both unsupervised and supervised tasks. We show that we are able to learn statistics that can be used for: clustering datasets, transferring generative models to new datasets, selecting representative samples of datasets and classifying previously unseen classes. We refer to our model as a neural statistician, and by this we mean a neural network that can learn to compute summary statistics of datasets without supervision.},
-	journaltitle = {{arXiv}:1606.02185 [cs, stat]},
-	author = {Edwards, Harrison and Storkey, Amos},
-	urldate = {2017-05-28},
-	date = {2016-06-07},
-	eprinttype = {arxiv},
-	eprint = {1606.02185},
-	keywords = {Computer Science - Learning, Statistics - Machine Learning},
-	file = {arXiv\:1606.02185 PDF:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/JD4UT5UD/Edwards and Storkey - 2016 - Towards a Neural Statistician.pdf:application/pdf;arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/B9BNT4Z8/1606.html:text/html}
-}
-
-@inproceedings{bartos_optimized_2016,
-	title = {Optimized invariant representation of network traffic for detecting unseen malware variants},
-	url = {https://www.usenix.org/system/files/conference/usenixsecurity16/sec16_paper_bartos.pdf},
-	booktitle = {J25th {USENIX} Security Symposium ({USENIX} Security 16). {USENIX} Association},
-	author = {Bartos, Karel and Sofka, Michal and Franc, Vojtech},
-	urldate = {2017-05-28},
-	date = {2016},
-	file = {[PDF] usenix.org:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/3VETSZI8/Bartos et al. - 2016 - Optimized invariant representation of network traf.pdf:application/pdf}
-}
-
-@article{anderson_deciphering_2016,
-	title = {Deciphering Malware's use of {TLS} (without Decryption)},
-	url = {http://arxiv.org/abs/1607.01639},
-	abstract = {The use of {TLS} by malware poses new challenges to network threat detection because traditional pattern-matching techniques can no longer be applied to its messages. However, {TLS} also introduces a complex set of observable data features that allow many inferences to be made about both the client and the server. We show that these features can be used to detect and understand malware communication, while at the same time preserving the privacy of benign uses of encryption. These data features also allow for accurate malware family attribution of network communication, even when restricted to a single, encrypted flow. To demonstrate this, we performed a detailed study of how {TLS} is used by malware and enterprise applications. We provide a general analysis on millions of {TLS} encrypted flows, and a targeted study on 18 malware families composed of thousands of unique malware samples and ten-of-thousands of malicious {TLS} flows. Importantly, we identify and accommodate the bias introduced by the use of a malware sandbox. The performance of a malware classifier is correlated with a malware family's use of {TLS}, i.e., malware families that actively evolve their use of cryptography are more difficult to classify. We conclude that malware's usage of {TLS} is distinct from benign usage in an enterprise setting, and that these differences can be effectively used in rules and machine learning classifiers.},
-	journaltitle = {{arXiv}:1607.01639 [cs]},
-	author = {Anderson, Blake and Paul, Subharthi and {McGrew}, David},
-	urldate = {2017-05-28},
-	date = {2016-07-06},
-	eprinttype = {arxiv},
-	eprint = {1607.01639},
-	keywords = {Computer Science - Cryptography and Security},
-	file = {arXiv\:1607.01639 PDF:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/XPUFNA7I/Anderson et al. - 2016 - Deciphering Malware's use of TLS (without Decrypti.pdf:application/pdf;arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/Q6K7FQHI/1607.html:text/html}
-}
-
 @article{dietterich_solving_1997,
 	title = {Solving the multiple instance problem with axis-parallel rectangles},
 	volume = {89},
@@ -171,22 +122,6 @@
 	date = {2013-08},
 	keywords = {Bag-of-Words, Codebook, Multi-instance learning},
 	file = {ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/ATXBMISH/S0004370213000581.html:text/html}
-}
-
-@article{foulds_review_2010,
-	title = {A review of multi-instance learning assumptions},
-	volume = {25},
-	issn = {1469-8005, 0269-8889},
-	url = {https://www.cambridge.org/core/journals/knowledge-engineering-review/article/review-of-multiinstance-learning-assumptions/0915098C83BF119A377015A45952247A},
-	doi = {10.1017/S026988890999035X},
-	abstract = {{AbstractMulti}-instance ({MI}) learning is a variant of inductive machine learning, where each learning example contains a bag of instances instead of a single feature vector. The term commonly refers to the supervised setting, where each bag is associated with a label. This type of representation is a natural fit for a number of real-world learning scenarios, including drug activity prediction and image classification, hence many {MI} learning algorithms have been proposed. Any {MI} learning method must relate instances to bag-level class labels, but many types of relationships between instances and class labels are possible. Although all early work in {MI} learning assumes a specific {MI} concept class known to be appropriate for a drug activity prediction domain; this ‘standard {MI} assumption’ is not guaranteed to hold in other domains. Much of the recent work in {MI} learning has concentrated on a relaxed view of the {MI} problem, where the standard {MI} assumption is dropped, and alternative assumptions are considered instead. However, often it is not clearly stated what particular assumption is used and how it relates to other assumptions that have been proposed. In this paper, we aim to clarify the use of alternative {MI} assumptions by reviewing the work done in this area.},
-	pages = {1--25},
-	number = {1},
-	journaltitle = {The Knowledge Engineering Review},
-	author = {Foulds, James and Frank, Eibe},
-	urldate = {2017-05-31},
-	date = {2010-03},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/JK8HXZKR/0915098C83BF119A377015A45952247A.html:text/html}
 }
 
 @report{berners-lee_uniform_1994,
@@ -231,15 +166,6 @@
 	urldate = {2017-06-26},
 	date = {2002-08},
 	langid = {english}
-}
-
-@article{maron_learning_1998,
-	title = {Learning from ambiguity},
-	url = {https://dspace.mit.edu/handle/1721.1/7087},
-	author = {Maron, Oded},
-	urldate = {2017-06-26},
-	date = {1998},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/MGB4MJRC/7087.html:text/html}
 }
 
 @inproceedings{muandet_learning_2012,
@@ -290,16 +216,6 @@
 	author = {Dempster, A. P. and Laird, N. M. and Rubin, D. B.},
 	urldate = {2017-07-01},
 	date = {1977}
-}
-
-@inproceedings{amar_multiple-instance_2001,
-	title = {Multiple-instance learning of real-valued data},
-	url = {http://cse.seu.edu.cn/people/zhangml/files/multi.pdf},
-	pages = {3--10},
-	booktitle = {{ICML}},
-	author = {Amar, Robert A. and Dooly, Daniel R. and Goldman, Sally A. and Zhang, Qi},
-	urldate = {2017-07-01},
-	date = {2001}
 }
 
 @inproceedings{maron_framework_1998,
@@ -592,4 +508,69 @@
 	urldate = {2017-07-06},
 	date = {2017},
 	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/6HS5G8ZP/1706.html:text/html}
+}
+
+@article{chen_image_2004,
+	title = {Image Categorization by Learning and Reasoning with Regions},
+	volume = {5},
+	issn = {{ISSN} 1533-7928},
+	url = {http://www.jmlr.org/papers/v5/chen04a.html},
+	pages = {913--939},
+	issue = {Aug},
+	journaltitle = {Journal of Machine Learning Research},
+	author = {Chen, Yixin and Wang, James Z.},
+	urldate = {2017-07-06},
+	date = {2004},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/M5FF5FNU/chen04a.html:text/html}
+}
+
+@article{zhang_multi-instance_2009,
+	title = {Multi-instance clustering with applications to multi-instance prediction},
+	volume = {31},
+	issn = {0924-669X, 1573-7497},
+	url = {https://link.springer.com/article/10.1007/s10489-007-0111-x},
+	doi = {10.1007/s10489-007-0111-x},
+	abstract = {In the setting of multi-instance learning, each object is represented by a bag composed of multiple instances instead of by a single instance in a traditional learning setting. Previous works in this area only concern multi-instance prediction problems where each bag is associated with a binary (classification) or real-valued (regression) label. However, unsupervised multi-instance learning where bags are without labels has not been studied. In this paper, the problem of unsupervised multi-instance learning is addressed where a multi-instance clustering algorithm named Bamic is proposed. Briefly, by regarding bags as atomic data items and using some form of distance metric to measure distances between bags, Bamic adapts the popular k-Medoids algorithm to partition the unlabeled training bags into k disjoint groups of bags. Furthermore, based on the clustering results, a novel multi-instance prediction algorithm named Bartmip is developed. Firstly, each bag is re-represented by a k-dimensional feature vector, where the value of the i-th feature is set to be the distance between the bag and the medoid of the i-th group. After that, bags are transformed into feature vectors so that common supervised learners are used to learn from the transformed feature vectors each associated with the original bag’s label. Extensive experiments show that Bamic could effectively discover the underlying structure of the data set and Bartmip works quite well on various kinds of multi-instance prediction problems.},
+	pages = {47--68},
+	number = {1},
+	journaltitle = {Applied Intelligence},
+	shortjournal = {Appl Intell},
+	author = {Zhang, Min-Ling and Zhou, Zhi-Hua},
+	urldate = {2017-07-06},
+	date = {2009-08-01},
+	langid = {english},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/BSNAI4G5/10.html:text/html}
+}
+
+@thesis{foulds_learning_2008,
+	title = {Learning Instance Weights in Multi-Instance Learning},
+	url = {http://researchcommons.waikato.ac.nz/handle/10289/2460},
+	abstract = {Multi-instance ({MI}) learning is a variant of supervised machine learning, where each learning example contains a bag of instances instead of just a single feature vector. {MI} learning has applications in areas such as drug activity prediction, fruit disease management and image classification.
+
+This thesis investigates the case where each instance has a weight value determining the level of influence that it has on its bag's class label. This is a more general assumption than most existing approaches use, and thus is more widely applicable. The challenge is to accurately estimate these weights in order to make predictions at the bag level.
+
+An existing approach known as {MILES} is retroactively identified as an algorithm that uses instance weights for {MI} learning, and is evaluated using a variety of base learners on benchmark problems. New algorithms for learning instance weights for {MI} learning are also proposed and rigorously evaluated on both artificial and real-world datasets. The new algorithms are shown to achieve better root mean squared error rates than existing approaches on artificial data generated according to the algorithms' underlying assumptions. Experimental results also demonstrate that the new algorithms are competitive with existing approaches on real-world problems.},
+	institution = {The University of Waikato},
+	type = {Thesis},
+	author = {Foulds, James Richard},
+	urldate = {2017-07-06},
+	date = {2008},
+	langid = {english},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/HJKFVNMB/2460.html:text/html}
+}
+
+@inproceedings{zhou_multi-instance_2009,
+	location = {New York, {NY}, {USA}},
+	title = {Multi-instance Learning by Treating Instances As non-I.I.D. Samples},
+	isbn = {978-1-60558-516-1},
+	url = {http://doi.acm.org/10.1145/1553374.1553534},
+	doi = {10.1145/1553374.1553534},
+	series = {{ICML} '09},
+	abstract = {Previous studies on multi-instance learning typically treated instances in the bags as independently and identically distributed. The instances in a bag, however, are rarely independent in real tasks, and a better performance can be expected if the instances are treated in an non-i.i.d. way that exploits relations among instances. In this paper, we propose two simple yet effective methods. In the first method, we explicitly map every bag to an undirected graph and design a graph kernel for distinguishing the positive and negative bags. In the second method, we implicitly construct graphs by deriving affinity matrices and propose an efficient graph kernel considering the clique information. The effectiveness of the proposed methods are validated by experiments.},
+	pages = {1249--1256},
+	booktitle = {Proceedings of the 26th Annual International Conference on Machine Learning},
+	publisher = {{ACM}},
+	author = {Zhou, Zhi-Hua and Sun, Yu-Yin and Li, Yu-Feng},
+	urldate = {2017-07-06},
+	date = {2009}
 }
