Cleaned up the results dir

--- a/results.tex
+++ b/results.tex
@@ -32,12 +32,12 @@ Bylo vyzkoušeno 5 různých topologií neuronových sítí, odpovídajících m
 
 Jako funkce \( \psi \) (ve smyslu kapitoly \ref{model}) byla použita funkce popsaná algoritmem \ref{feature_generator}. Tato funkce generuje vektor příznaků pomocí \( n \)\BPname{-gramů}, tedy podslov délky \( n \). Byly vyzkoušeny unigramy (\( n = 1 \)), bigramy \todo{Když se stihnou evaluovat} (\( n = 2 \)) a trigramy (\( n = 3 \)), všechny s topologií relumean. PR křivky pro tyto tři rozdílné velikosti příznaků jsou na obrázku \ref{ngrams}.\todo{Obrázek}
 
-\result{by_settings/basic_PR.pdf}{ngrams}{Srovnání PR křivek pro různé velikosti příznaků}
+\result{placeholder.pdf}{ngrams}{Srovnání PR křivek pro různé velikosti příznaků}
 
 \section{Srovnání různého počtu příznaků}
 V algoritmu \ref{feature_generator} lze měnit i velikost generovaného vektoru příznaků. Byly vyzkoušeny velikosti \( 509 \), \( 1021 \), \( 2053 \), \( 4099 \) a \( 8191 \) \todo{Když se stihnou evaluovat}. Všechny tyto velikosti byly zkoušeny s topologií relumean a trigramy. Srovnání PR křivek je na obrázku \ref{feature_count}.\todo{Obrázek}
 
-\result{by_settings/basic_PR.pdf}{feature_count}{Srovnání PR křivek pro různé počty příznaků}
+\result{placeholder.pdf}{feature_count}{Srovnání PR křivek pro různé počty příznaků}
 
 \section{Srovnání různých vah na pozitivních taškách}
 Při trénování umělé neuronové sítě lze pozitivním a negativním taškám přiřadit různé váhy, podle kterých se algoritmus bude jinak agresivně snažit odstranit falešně pozitivní a falešně negativní odhady \todo{Víc detailu?}. Byly vyzkoušeny váhy na pozitivních taškách \( 0.5 \), \( 0.1 \) a \( 0.01 \). Všechny váhy byly testovány s topologií relumean, trigramy a vektorem příznaků o velikosti \( 2053 \). Jejich PR křivky jsou srovnané na obrázku \ref{weights}.
