--- a/BP.tex
+++ b/BP.tex
@@ -21,12 +21,13 @@
 
 \clearpage
 
-%\input{abstract.tex}
+\input{abstract.tex}
 
 \clearpage
 
 \pagestyle{plain}
 
+\todo{Odstranit todo, ocgx}
 \listoftodos
 
 \tableofcontents
