--- a/introduction.tex
+++ b/introduction.tex
@@ -5,4 +5,4 @@ Podle nedávných statistik se v 100\% podnikových sítí vyskytuje provoz způ
 
 Pro řešení této úlohy byl vybrán přístup pomocí tzv. multi-instančního učení. Multi-instanční učení umožňuje navrženému modelu reflektovat hierarchickou strukturu adresy URL, která je používána jako vstupní identifikátor cílové destinace síťového spojení. Pro modelování celých adres URL byl přístup pomocí multi-instančního učení aplikován dvakrát na sebe sama a následně pozměněn, aby odpovídal struktuře a funkci jednotlivých částí adresy URL. Je předpokládáno, že tato korespondence mezi vstupními daty a modelem tato data popisujícím pozitivně ovlivní kvalitu představeného klasifikátoru. Navržený model je topologicky složitější než srovnatelný model nevyužívající multi-instanční přístup, avšak je méně výpočetně náročný.
 
-\todo{Tohle možná spíš do abstraktu?}Součástí této práce je teoretické zavedení mutli-instančního učení pomocí dvou různých formalismů poskytujících odlišné pohledy na danou problematiku, popis přístupů k multi-instančnímu učení a souhrn předchozích prací věnujících se mutli-instančnímu učení. Dále je pak teoreticky popsán navržený model a jeho odlišnosti od standardního multi-instančního učení. V kapitole \ref{evaluation} jsou popsány metody použité k zhodnocení kvality navrženého klasifikátoru a porovnání s předchozí prací na tomto problému. Je srovnán vliv několika parametrů modelu na jeho kvalitu a vybráno nejlepší nastavení. Dále jsou poskytnuty výsledky praktického ověření představeného modelu a srovnání těchto výsledků s nejlepším předchozím modelem.
+Součástí této práce je teoretické zavedení multi-instančního učení pomocí množinového formalismu a pomocí stochastického formalismu. Oba tyto formalismy poskytují odlišný pohled na danou problematiku. Následuje popis paradigmat využívaných v multi-instančním učení a souhrn předchozích prací věnujících se mutli-instančnímu učení. Dále je pak teoreticky popsán navržený model a jeho odlišnosti od standardního multi-instančního učení. V kapitole \ref{evaluation} jsou popsány metody použité k zhodnocení kvality navrženého klasifikátoru a porovnání s předchozí prací na tomto problému. Je srovnán vliv několika parametrů modelu na jeho kvalitu a vybráno nejlepší nastavení. Dále jsou poskytnuty výsledky praktického ověření představeného modelu a srovnání těchto výsledků s nejlepším předchozím modelem.
