--- a/problem.tex
+++ b/problem.tex
@@ -43,9 +43,9 @@ Je zřejmé, že na pořadí podčástí domény záleží, definují "cestu" k 
 
 \section{Výhody přístupu pomocí MIL}
 
-Pro modelování klasifikační funkce byl využit přístup pomocí tzv. \BPname{Multi-instančního učení} (MIL)\footnote{resp. jeho speciální varianta, blíže popsaná v kapitole \ref{model}}, poprvé popsaného v \cite{dietterich_solving_1997}. Tento přítup, podrobněji popsaný v kapitole \ref{MIL}, vychází z předpokladu, že vstupem klasifikační funkce není jeden objekt, reprezentovaný vektorem o konstantní délce, ale sada (neznámého počtu) takovýchto objektů, které všechny dohromady tvoří jeden vzorek, zvaný \BPname{taška}. Dále je pak předpokládáno, že každou tašku je možno zařadit do nějaké třídy, přestože ne všechny objekty náleží do této třídy. Adresu URL lze považovat za takovouto tašku za využití jejího hierarchického modelu, nastíněného v sekci \ref{URL_structure}. Proto lze přístup pomocí Multi-instančního učení aplikovat na tento problém.
+\todo{?}Pro modelování klasifikační funkce byl využit přístup pomocí tzv. \BPname{multi-instančního učení} (MIL)\footnote{resp. jeho speciální varianta, blíže popsaná v kapitole \ref{model}}, poprvé popsaného v \cite{dietterich_solving_1997}. Tento přítup, podrobněji popsaný v kapitole \ref{MIL}, vychází z předpokladu, že vstupem klasifikační funkce není jeden objekt, reprezentovaný vektorem o konstantní délce, ale sada (neznámého počtu) takovýchto objektů, které všechny dohromady tvoří jeden vzorek, dále zvaný \BPname{taška}. Dále je pak předpokládáno, že každou tašku je možno zařadit do nějaké třídy, přestože ne všechny její objekty náleží do této třídy. \todo{URL je taška} Adresu URL lze považovat za takovouto tašku za využití jejího hierarchického modelu, nastíněného v sekci \ref{URL_structure}. Proto lze přístup pomocí Multi-instančního učení aplikovat na tento problém.
 
-Přístup pomocí Multi-instančního učení produkuje topologicky složitější modely než je srovnatelný klasický model. Výměnou za tuto nevýhodu v podobě zvětšené složitosti implementační je zmenšená složitost implementační. Multi-instanční model totiž modeluje každou instanci nejprve zvlášť a teprve poté následuje model pro celý vzorek. To v případě použití neuronové sítě znamená výrazně méné propojení než u srovnatelné klasické síťě se stejnými počty neuronů ve stejných vrstvách. Důležitým rozdílem též je, že narozdíl od klasického modelu je Multi-instanční model rozdělen do dvou částí (model pro instance a model pro tašky), přičemž ten samý instanční model je použit několikrát v rámci jedné tašky.
+Přístup pomocí Multi-instančního učení produkuje topologicky složitější modely než je srovnatelný klasický model. Výměnou za tuto nevýhodu v podobě zvětšené složitosti implementační je zmenšená složitost výpočetní. Multi-instanční model totiž modeluje každou instanci nejprve zvlášť a teprve poté následuje model pro celý vzorek. To v případě použití neuronové sítě znamená výrazně méné propojení než u srovnatelné klasické síťě se stejnými počty neuronů ve stejných vrstvách. Důležitým rozdílem též je, že narozdíl od klasického modelu je Multi-instanční model rozdělen do dvou částí (model pro instance a model pro tašky), přičemž ten samý instanční model je použit několikrát v rámci jedné tašky.
 
 Multi-instanční přístup nám tedy dovoluje vytvořit model, jehož topologie odpovídá hierarchické struktuře adresy URL, je výpočetně méně náročný než srovnatelný klasický model a umožňuje znovupoužití některých částí. To jsou důvody, proč byl tento přístup zvolen.
 
@@ -57,16 +57,16 @@ K trénování a testování modelu byla použita data získaná z Cisco Cloud W
 \begin{table}[h]
 	\caption{Souhrn použitých souborů dat}\label{dataset_table}
 	\centering
-	\begin{tabular}{lrrr}
+	\begin{tabular}{lrr}
 		\toprule
-		\null & \null & \multicolumn{2}{c}{Počet adres} \\
-		\cmidrule(l){3-4}
-		Dataset & Počet souborů & Legitimní & Malware \\
+		\null & \multicolumn{2}{c}{Počet adres} \\
+		\cmidrule(l){2-3}
+		Dataset & Legitimní & Malware \\
 		\midrule
-		Trénovací legitimní & 2 011 & 417 208 484 & 0 \\
-		Trénovací směs & 1 148 & 17 390 889 & 34 359 733 \\
-		Testovací legitimní & 7 263 & 1 522 255 052 & 0 \\
-		Testovací směs & 163 & 2 855 992 & 4 051 944 \\
+		Trénovací legitimní & 417 208 484 & 0 \\
+		Trénovací směs & 17 390 889 & 34 359 733 \\
+		Testovací legitimní & 1 522 255 052 & 0 \\
+		Testovací směs & 2 855 992 & 4 051 944 \\
 		\bottomrule
 	\end{tabular}
 \end{table}
